# agents-sdk-playground

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/agents_sdk_pg/: demo1-az.py  demo1.py  demo2.py  demo3.py
src/agents_sdk_pg/providers/: __init__.py  azure_openai.py
src/agents_sdk_pg/research_bot/: main.py  manager.py
src/agents_sdk_pg/research_bot/bot_agents/: planner_agent.py  search_agent.py  writer_agent.py
